<resources>
    <string name="maps_api_key">AIzaSyC8eB1ibOsn66hj95216LzORQL0f8dC84w</string>

    <string name="app_name">concertTrack</string>
    <string name="mainPageInfo">Korzystaj z aplikacji jako artysta lub fan."\n" Zaloguj się na swoje konto lub utwórz nowe.</string>
    <string name="loginArtistInfo">Zaloguj się jako artysta aby używać aplikacji.</string>
    <string name="loginFanInfo">Zaloguj się jako fan aby używać aplikacji.</string>
    <string name="mailLoginET">Adres email</string>
    <string name="passwordLoginET">Hasło</string>
    <string name="forgotPasswordText">Nie pamiętasz hasła?</string>
    <string name="logInInfo">Zaloguj się</string>
    <string name="registerInfo">Zarejestruj się</string>
    <string name="noAccountInfo">Nie masz jeszcze konta?</string>
    <string name="appName">concertTrack</string>
    <string name="IamfanInfo">jestem fanem</string>
    <string name="IamartistInfo">jestem artystą</string>
    <string name="userName">Nazwa użytkownika</string>
    <string name="repeatPassword">Powtórz hasło</string>
    <string name="artistName">Nazwa artysty/zespołu</string>
    <string name="notAllowedEmptyField">Pole nie może być puste</string>
    <string name="tooLongUserName">Za długa nazwa użytkownika</string>
    <string name="tooLongPlaceName">Za długa nazwa miejsca</string>
    <string name="passwordTooShort">Hasło powinno mieć przynajmniej 6 znaków</string>
    <string name="differentPasswordMsg">Hasła powinny być takie same </string>
    <string name="badlyFormattedEmail">Niepoprawny adres email</string>
    <string name="unknownLoginError">Logowanie nie powiodło się. Coś poszło nie tak!</string>
    <string name="noSuchAccount">Logowanie nie powiodło się. Konto o podanym adresie email nie istnieje!</string>
    <string name="noSuchAccountArtist">Logowanie nie powiodło się. Konto o podanym adresie email nie istnieje w bazie artystów!</string>
    <string name="noSuchAccountFan">Logowanie nie powiodło się. Konto o podanym adresie email nie istnieje w bazie fanów!</string>
    <string name="wrongPassword">Logowanie nie powiodło się. Niepoprawne hasło!</string>
    <string name="loginSuccess">Zalogowano!</string>
    <string name="unknownRegisterError">Rejstracja nie powiodła się. Coś poszło nie tak!</string>
    <string name="accountExists">Rejestracja nie powiodła się. Konto o podanym adresie email już istnieje! </string>
    <string name="registerSuccess">Zarejestrowano nowego użytkownika!</string>
    <string name="useAppWithoutLoginInfo">przeglądaj wydarzenia muzyczne bez logowania</string>
    <string name="orInfo">lub</string>
    <string name="forgotPasswordIfo">Wpisz email aby otrzymać wiadomość "\n"z linkiem do resetowania hasła.</string>
    <string name="sendEmailBtnInfo">Wyślij email</string>
    <string name="sendEmailError">Wysyłanie maila nie powiodło się. Coś poszło nie tak!</string>
    <string name="wrongEmailError">Wysyłanie maila nie powiodło się. Konto o podanym adresie email nie istnieje!</string>
    <string name="wrongEmailErrorFan">Wysyłanie maila nie powiodło się. Konto o podanym adresie email nie istnieje w bazie fanów!</string>
    <string name="wrongEmailErrorArtist">Wysyłanie maila nie powiodło się. Konto o podanym adresie email nie istnieje w bazie artystów!</string>
    <string name="sendEmailSuccess">Mail zostal wysłany. Sprawdź swoją skrzynkę aby dokończyć restowanie hasła! </string>
    <string name="createFanAccountInfo">Utwórz nowe konto jako fan</string>
    <string name="createArtistAccountInfo">Utwórz nowe konto jako artysta</string>
    <string name="extraDataRegisterInfo">Uzupełnij dodatkowe dane, aby Twój profil "\n"był atrakcyjniejszy i łatwiejszy do znalezienia."\n"Możesz to zrobić także po rejestracji.</string>
    <string name="shortDesc">Krótki opis"\n"</string>
    <string name="permission_denied_info">Brak uprawnień…</string>
    <string name="shortDescInfo">Napisz pare zdań o sobie:</string>
    <string name="addAvatarInfo">Dodaj zdjęcie z galerii</string>
    <string name="otherLinksInfo">Linki do innych portali:</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="events">Wydarzenia</string>
    <string name="search">Szukaj</string>
    <string name="favourites">Ulubione</string>
    <string name="my_account">Moje konto</string>
    <string name="add_event">Dodaj wydarzenie</string>
    <string name="my_events">Moje wydarzenia</string>
    <string name="guest_info">Aby w pełni korzystać z aplikacji "\n"zaloguj się do swojego konta lub utwórz nowe.</string>
    <string name="goToMainPageBtnInfo">przejdź do ekranu głównego</string>
    <string name="duplicatedArtistName">Artysta o takiej nazwie już istnieje</string>
    <string name="settingsInfo">Uzupełnij lub zmień swoje dane,"\n"aby Twój profil był atrakcyjniejszy"\n"i łatwiejszy do znalezienia.</string>
    <string name="nothingToEdit">Nic nie zostało zmienione. Edytuj konto i zapisz lub anuluj zmiany.</string>
    <string name="nothingToEditEvent">Nic nie zostało zmienione. Edytuj wydarzenie i zapisz lub anuluj zmiany.</string>
    <string name="unknownUpdatingArtistError">Edycja konta nie powiodła się. Coś poszło nie tak</string>
    <string name="unknownUpdatingEventError">Edycja wydarzenia nie powiodła się. Coś poszło nie tak</string>
    <string name="successUpdatingData">Zmiany zostały zapisane!</string>
    <string name="wrong_start_time">Wybrana data i czas nie moga być z przeszłości! </string>
    <string name="tooLongHeader">Za długi nagłówek</string>
    <string name="header">header</string>
    <string name="startDate">startDate</string>
    <string name="startTime">startTime</string>
    <string name="description">description</string>
    <string name="ticketsLink">ticketsLink</string>
    <string name="noPlaceFound">Obiekt nie został znaleziony na mapie!</string>
    <string name="placeName">Nazwa miejsca</string>
    <string name="unknownAddress">\?\?\?</string>
    <string name="addNewEventBtnInfo">Dodaj nowe wydarzenie</string>
    <string name="searchPlaceInputInfo">Wyszukaj miejsce, gdzie odbędzie się koncert</string>
    <string name="addressInfo">Adres:</string>
    <string name="empty">   </string>
    <string name="newEventAddedSuccessfully">Dodano nowe wydarzenie muzyczne!</string>
    <string name="newEventAddedError">Dodawnaie wydarznie nie powiodło się. Coś poszło nie tak!</string>
    <string name="undo">Cofinj</string>
    <string name="eventDeleted">Usunięto wydarzenie</string>
    <string name="iWasThere">Byłem/byłam tam</string>
    <string name="interestedEventsInfo">Twoje wydarzenia oznaczone  jako \"Jestem zainteresowany/a\":</string>
    <string name="favouritesArtistsInfo">Artyści, których obserwujesz:</string>
    <string name="searchInputInfo">Wyszukaj wydarzenie, artystę</string>
    <string name="noRecommendedInfoForGuest">Brak danych o polecanych wydarzeniach i artystach."\n" Zarejestruj lub zaloguj się do aplikacji jako fan,"\n"aby móc poznawać muzykę, która może Ci się spodobać!</string>
    <string name="noRecommendedInfoForFan">Brak danych o polecanych wydarzeniach i artystach."\n" Dodaj artystów, których słuchasz, do ulubionych,"\n" aby móc poznawać muzykę, która może Ci się spodobać! </string>
    <string name="recommendedComingEventsInfo">Polecane nadchodzące wydarzenia:</string>
    <string name="commingEventsInfo">Nadchodzące wydarzenia:</string>
    <string name="recommendedArtistsInfo">Polecani artyści:</string>
    <string name="artistsInfo">Artyści:</string>
    <string name="noSearchedArtists">Brak artystów spełniających, kryteria wyszukiwania</string>
    <string name="noSearchedComingEventsInfo">Brak wydarzeń spełniających, kryteria wyszukiwania</string>
    <string name="noSearchedPastEventsInfo">Brak wydarzeń spełniających, kryteria wyszukiwania</string>
    <string name="pastEventsInfo">Minione wydarzenia:</string>
    <string name="wrongPasswordError">Niepoprawne hasło</string>
</resources>